add eslint, fix some bags for datepicker, now page cards is completed, i hope.

--- a/src/pug/includes/modules/checkbox-item.pug
+++ b/src/pug/includes/modules/checkbox-item.pug
@@ -5,6 +5,6 @@ mixin checkbox-item (title,description)
 			span.checkbox-wrapper__checkmark
 				svg
 					use(xlink:href="#check")
-			.checkbox-wrapper__sub-wrap
+			span.checkbox-wrapper__sub-wrap
 				span.checkbox-wrapper__subtitle #{title}
 				span.checkbox-wrapper__description #{description}
