--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -5,8 +5,8 @@ doctype html
 html(lang='en')
   head
     meta(charset='utf-8')
-    title #{title}
-    meta(name="description", content=description)
+    title task-2
+    meta(name="description", content="frontend lessons")
     meta(name="viewport", content="width=device-width, initial-scale=1")
     block head
 
