--- a/src/assets/scss/modules/date-picker.scss
+++ b/src/assets/scss/modules/date-picker.scss
@@ -26,9 +26,25 @@
 }
 
 .-in-range- {
+  &:first-child {
+      &:after {
+        content: "";
+        display: block;
+        position: absolute;
+        z-index: -3;
+        left: -50%;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(180deg, rgba(188, 156, 255,.25) 0%, rgba(139, 164, 249,.25) 100%);
+        color: #4a4a4a;
+        border-top-left-radius: 50%;
+        border-bottom-left-radius: 50%;
+      }
+    }
   &.datepicker--cell-day.-other-month-, &.datepicker--cell-year.-other-decade- {
     background: linear-gradient(180deg, rgba(188, 156, 255,.25) 0%, rgba(139, 164, 249,.25) 100%);
     color: $ds75;
+
   }
 
   &.-focus- {
@@ -115,6 +131,22 @@
     &.-focus- {
       background-color: rgba(92, 196, 239, 0.2);
     }
+    &:first-child {
+      &:after {
+        content: "";
+        display: block;
+        position: absolute;
+        z-index: -3;
+        left: -50%;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(180deg, rgba(188, 156, 255,.25) 0%, rgba(139, 164, 249,.25) 100%);
+        color: #4a4a4a;
+        border-top-left-radius: 50%;
+        border-bottom-left-radius: 50%;
+      }
+    }
+    
   }
 
   &.-disabled- {
@@ -139,6 +171,22 @@
     border-radius: 4px 0 0 4px;
     position: relative;
     z-index: 10;
+
+  }
+  &.-range-from- + .-in-range- {
+      &:after {
+        content: "";
+        display: block;
+        position: absolute;
+        z-index: -3;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(180deg, rgba(188, 156, 255,.25) 0%, rgba(139, 164, 249,.25) 100%);
+        color: #4a4a4a;
+        border-top-left-radius: 50%;
+        border-bottom-left-radius: 50%;
+      }
   }
 
   &.-range-to- {
@@ -146,6 +194,36 @@
     border-radius: 0 4px 4px 0;
     position: relative;
     z-index: 10;
+  }
+
+  &.-range-to-.-selected- {
+    &:after {
+      content: "";
+      display: block;
+      position: absolute;
+      z-index: -3;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(180deg, rgba(188, 156, 255,.25) 0%, rgba(139, 164, 249,.25) 100%);
+      color: #4a4a4a;
+      border-top-right-radius: 50%;
+      border-bottom-right-radius: 50%;
+    }
+  }
+
+  &.-range-to-.selected ~ .-selected- {
+     &:after {
+      content: "";
+      display: block;
+      position: absolute;
+      z-index: -3;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(180deg, rgba(188, 156, 255,.25) 0%, rgba(139, 164, 249,.25) 100%);
+      color: #4a4a4a;
+      border-top-right-radius: 50%;
+      border-bottom-right-radius: 50%;
+    }
   }
 
   &.-range-from-.-range-to- {
@@ -268,6 +346,21 @@
   &.datepicker--cell-day.-other-month-, &.datepicker--cell-year.-other-decade- {
     background: linear-gradient(180deg, rgba(188, 156, 255,.25) 0%, rgba(139, 164, 249,.25) 100%);
     color: $ds75;
+    &:first-child {
+      &:after {
+        content: "";
+        display: block;
+        position: absolute;
+        z-index: -3;
+        left: -50%;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(180deg, rgba(188, 156, 255,.25) 0%, rgba(139, 164, 249,.25) 100%);
+        color: #4a4a4a;
+        border-top-left-radius: 50%;
+        border-bottom-left-radius: 50%;
+      }
+    }
   }
 
   &.-focus- {
@@ -476,6 +569,21 @@
   &.datepicker--cell-day.-other-month-, &.datepicker--cell-year.-other-decade- {
     background: linear-gradient(180deg, rgba(188, 156, 255,.25) 0%, rgba(139, 164, 249,.25) 100%);
     color: $ds75;
+    &:first-child {
+      &:after {
+        content: "";
+        display: block;
+        position: absolute;
+        z-index: -3;
+        left: -50%;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(180deg, rgba(188, 156, 255,.25) 0%, rgba(139, 164, 249,.25) 100%);
+        color: #4a4a4a;
+        border-top-left-radius: 50%;
+        border-bottom-left-radius: 50%;
+      }
+    }
   }
 
   &.-focus- {
@@ -646,6 +754,21 @@
   &.datepicker--cell-day.-other-month-, &.datepicker--cell-year.-other-decade- {
     background-color: linear-gradient(180deg, rgba(188, 156, 255,.25) 0%, #8BA4F9 100%,);
     color: $ds75;
+    &:first-child {
+      &:after {
+        content: "";
+        display: block;
+        position: absolute;
+        z-index: -3;
+        left: -50%;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(180deg, rgba(188, 156, 255,.25) 0%, rgba(139, 164, 249,.25) 100%);
+        color: #4a4a4a;
+        border-top-left-radius: 50%;
+        border-bottom-left-radius: 50%;
+      }
+    }
   }
 
   &.-focus- {
@@ -905,6 +1028,21 @@
   &.datepicker--cell-day.-other-month-, &.datepicker--cell-year.-other-decade- {
     background: linear-gradient(180deg, rgba(188, 156, 255,.25) 0%, rgba(139, 164, 249,.25) 100%);
     color: $ds75;;
+    &:first-child {
+      &:after {
+        content: "";
+        display: block;
+        position: absolute;
+        z-index: -3;
+        left: -50%;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(180deg, rgba(188, 156, 255,.25) 0%, rgba(139, 164, 249,.25) 100%);
+        color: #4a4a4a;
+        border-top-left-radius: 50%;
+        border-bottom-left-radius: 50%;
+      }
+    }
   }
 
   &.-focus- {
@@ -920,15 +1058,18 @@
 }
 
 .after-range-from {
-  display: block;
-  position: absolute;
-  z-index: -3;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(180deg, rgba(188, 156, 255,.25) 0%, rgba(139, 164, 249,.25) 100%);
-  color: #4a4a4a;
-  border-top-left-radius: 50%;
-  border-bottom-left-radius: 50%;
+  &:after {
+    content: "";
+    display: block;
+    position: absolute;
+    z-index: -3;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, rgba(188, 156, 255,.25) 0%, rgba(139, 164, 249,.25) 100%);
+    color: #4a4a4a;
+    border-top-left-radius: 50%;
+    border-bottom-left-radius: 50%;
+  }
 }
 .after-range-to {
   display: block;
