--- a/src/assets/scss/modules/date-picker.scss
+++ b/src/assets/scss/modules/date-picker.scss
@@ -188,6 +188,21 @@
         border-bottom-left-radius: 50%;
       }
   }
+  &.-range-from- + .-range-to- {
+      &:before {
+        content: "";
+        display: block;
+        position: absolute;
+        z-index: -3;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(180deg, rgba(188, 156, 255,.25) 0%, rgba(139, 164, 249,.25) 100%);
+        color: #4a4a4a;
+        border-top-left-radius: 50%;
+        border-bottom-left-radius: 50%;
+      }
+  }
 
   &.-range-to- {
     background-color: rgba(92, 196, 239, 0.1);
