add box-shadow for slide

--- a/src/pug/pages/cards-page.pug
+++ b/src/pug/pages/cards-page.pug
@@ -115,6 +115,8 @@ block content
 								.swiper-slide 
 									img(src="assets/img/room-1.jpg").card-room__img
 							.swiper-pagination
+							.swiper-button-prev
+							.swiper-button-next
 						.room.room_padding
 							.wrap-element_inline.wrap-element
 								.room__number
@@ -220,6 +222,8 @@ block content
 								.swiper-slide 
 									img(src="assets/img/room-2.jpg").card-room__img
 							.swiper-pagination
+							.swiper-button-prev
+							.swiper-button-next
 						.room.room_padding
 							.wrap-element_inline.wrap-element
 								.room__number
