--- a/src/assets/scss/modules/swiper.scss
+++ b/src/assets/scss/modules/swiper.scss
@@ -17,3 +17,67 @@
 	background: $white;
 	border: 1px solid $white;
 }
+
+.swiper-button-next, .swiper-button-prev, .swiper-button-disabled {
+	opacity: 0;
+	transition: $trFast;
+	width: rem(10);
+	height: rem(10);
+	margin: 0;
+	&:after {
+		content: "";
+		width: rem(10);
+		height: rem(10);
+		border: 2px solid $white;
+		transform: rotate(45deg);
+	}
+}
+.swiper-button-next {
+	right: rem(20);
+	&:after {
+		border-left: none;
+		border-bottom: none;
+	}
+}
+.swiper-button-prev {
+	left: rem(20);
+	&:after {
+		border-right: none;
+		border-top: none;
+	}
+}
+.swiper-slide {
+	&:after {
+		content: "";
+		opacity: 0;
+		display: block;
+		width: 100%;
+		height: 100%;
+		box-shadow:-50px 0 50px -23px rgba(0, 0, 0, .5) inset,
+   	50px 0 50px -23px rgba(0, 0, 0, .5) inset;
+		position: absolute;
+		top: 0;
+		z-index: 10;
+		transition: $trFast;
+	}
+}
+.swiper-container {
+	cursor: pointer;
+	
+	&:hover {
+		.swiper-slide {
+		&:after {
+				opacity: 1;
+			}
+		}
+		.swiper-button-next, .swiper-button-prev {
+			opacity: 1;
+		}
+		.swiper-button-next.swiper-button-disabled, .swiper-button-prev.swiper-button-disabled {
+			opacity: 1;
+		}	
+	}
+}
+.swiper-button-next.swiper-button-disabled, .swiper-button-prev.swiper-button-disabled {
+	opacity: 0;
+}
