--- a/src/assets/scss/modules/wrap-element.scss
+++ b/src/assets/scss/modules/wrap-element.scss
@@ -5,6 +5,9 @@
 	&_border-b {
 		border-bottom: 1px solid $ds25;
 	}
+	&_margin-b-40 {
+		margin-bottom: rem(40);
+	}
 	&_margin-b-30 {
 		margin-bottom: rem(30);
 	}
