--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -11,6 +11,7 @@ $mainLineHeight          : 1.4;
 
 
 $desktopWidth            : 1440px;
+$mdDesktopWidth          : 1160px;
 $smDesktopWidth          : 980px;
 $tableWidth              : 768px;
 $phoneWidth              : 480px;
