--- a/src/pug/pages/cards-page.pug
+++ b/src/pug/pages/cards-page.pug
@@ -14,11 +14,11 @@ include ../includes/modules/rate.pug
 include ../includes/modules/range-slider.pug
 
 block content
-	.cards-page
-		svg.logo
+	.grey-wrapper
+		svg.logo.logo_grey
 				use(xlink:href="#logo")
 		.container
-			.cards-page__wrapper
+			.grey-wrapper__wrapper
 				.card.card_with-padding
 					form
 						span.title Найдем номера под ваши пожелания
