--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -14,7 +14,7 @@ include ../includes/modules/rate.pug
 include ../includes/modules/range-slider.pug
 
 block content
-	svg.logo
+	svg.logo.logo_grey
 		use(xlink:href="#logo")
 	.ui-kit
 		.container
