--- a/src/assets/scss/modules/logo.scss
+++ b/src/assets/scss/modules/logo.scss
@@ -1,8 +1,19 @@
 .logo {
-	position: absolute;
-	width: 48px;
-	height: 48px;
-	left: 30px;
-	top: 30px;
-	z-index: 10;
+	&_colored {
+		width: rem(40);
+		height: rem(40);
+		margin-right: rem(12.5);
+	}
+	&_grey {
+		width: rem(40);
+		height: rem(40);
+		left: 30px;
+		top: 30px;
+		position: absolute;
+		z-index: 10;
+	}
+	&_toxin {
+		width: rem(53);
+		height: rem(13);
+	}
 }
