--- a/src/pug/pages/cards-page.pug
+++ b/src/pug/pages/cards-page.pug
@@ -100,7 +100,9 @@ block content
 									.price-calculator__total Итого
 									.price-calculator__border
 									.price-calculator__price 38 081₽
-							button.button.button_big перейти к оплате
+							button.button.button_big забронировать
+								svg.arrow-forward.arrow-forward_white
+									use(xlink:href="#arrow_forward")
 				.card.card-wrap.datepicker-here
 				.card
 					.card-room
