--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -56,6 +56,10 @@ ul, li {
   list-style-type: none;
 }
 
+button {
+  padding: 0;
+}
+
 input, label {
   cursor: pointer;
 }
@@ -67,16 +71,16 @@ input {
 
 section, .section {
   position: relative;
-  padding: rem(40) 0;
-  @media screen and (max-width: $desktopWidth) {
-    padding: 36px 0;
-  }
-  @media screen and (max-width: $desktopWidth) {
-    padding: 28px 0;
-  }
-  @media screen and (max-width: $desktopWidth) {
-    padding: 20px 0;
-  }
+  // padding: rem(40) 0;
+  // @media screen and (max-width: $desktopWidth) {
+  //   padding: 36px 0;
+  // }
+  // @media screen and (max-width: $desktopWidth) {
+  //   padding: 28px 0;
+  // }
+  // @media screen and (max-width: $desktopWidth) {
+  //   padding: 20px 0;
+  // }
 }
 
 ::spelling-error {
@@ -99,10 +103,10 @@ section, .section {
 
 .container {
   width: 100%;
+  height: 100%;
   flex: 0 0 auto;
-  position: relative;
   margin: 0 auto;
-  padding: 0 1rem;
+  padding: 0;
   max-width: $desktopWidth;
   @media screen and (max-width: $desktopWidth) {
     max-width: $mdDesktopWidth;
@@ -113,13 +117,13 @@ section, .section {
   @media screen and (max-width: $smDesktopWidth) {
     max-width: $tableWidth;
   }
-  @media screen and (max-width: $tableWidth) {
+  @media (min-width: $phoneWidth) and (max-width: $tableWidth) {
     max-width: $phoneWidth;
-    
+    padding: 0 1rem;
   }
-  @media screen and (max-width: $phoneWidth) {
+  @media (min-width: $smPhoneWidth) and (max-width: $phoneWidth) {
     max-width: 100vw;
-    padding: 0 auto;
+    padding: 0 rem(10);
   }
 }
 .row {
@@ -187,4 +191,7 @@ section, .section {
 @import "modules/form";
 @import "modules/card-room";
 @import "modules/swiper";
+@import "modules/nav-social";
+@import "modules/footer";
+@import "modules/section-main";
 
