--- a/src/assets/scss/modules/footer.scss
+++ b/src/assets/scss/modules/footer.scss
@@ -1,1 +1,109 @@
-// footer style
+.footer {
+	background-color: $white;
+	font-size: rem(14);
+	&_bs {
+		box-shadow: $bs-2;
+	}
+	&__full-content {
+		padding: rem(100) 0 rem(100) 0;
+		display: grid;
+		grid-template-columns: 1fr 2fr 1fr;
+		box-shadow: 0px 1px 0px rgba(31, 32, 65, 0.1);
+		@media (min-width: $phoneWidth) and (max-width: $tableWidth) {
+			grid-template-columns: 1fr 1fr;
+			grid-template-rows: 1fr 1fr;
+			grid-gap: rem(10);
+			padding: rem(50) 0 rem(50) 0;
+		}
+		@media screen and (max-width: $phoneWidth) {
+			grid-template-columns: 1fr;
+			grid-template-rows: 1fr 1fr 1fr;
+			grid-gap: rem(10);
+			padding: rem(50) 0 0 0;
+		}
+	}
+	&__ease-content {
+		padding: rem(100) 0 rem(100) 0;
+		@media (min-width: $phoneWidth) and (max-width: $tableWidth) {
+			padding: rem(50) 0 rem(50) 0;
+		}
+		@media screen and (max-width: $phoneWidth) {
+			padding: rem(50) 0 rem(50) 0;
+		}
+	}
+	&__description {
+		&_center {
+			text-align: center;
+			margin-bottom: rem(25);
+		}
+		@media screen and (max-width: $phoneWidth) {
+			margin: 0 auto;
+			margin-bottom: rem(10);
+			text-align: center;
+		}
+	}
+	&__logo-text {
+		&_width-560 {
+			max-width: rem(560);
+			margin: 0 auto;
+		}
+		max-width: rem(260);
+		font-size: rem(14);
+		color: $ds75;
+		line-height: rem(24);
+	}
+	&__nav {
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr;
+		@media (min-width: $phoneWidth) and (max-width: $tableWidth) {
+			grid-row: 2 / 2;
+			grid-column: 1 / 4;
+		}
+		@media screen and (max-width: $phoneWidth) {
+			margin: 0 auto;
+		}
+	}
+	&__nav-li {
+		margin-bottom: rem(20);
+		font-size: rem(14);
+		color: $ds50;
+		&:first-child {
+			text-transform: uppercase;
+			color: $ds100;
+			@include MontBold;
+		}
+	}
+	&__nav-link {
+		color: $ds50;
+		&:hover {
+			color: $ds25;
+		}
+	}
+	&__form {
+		@media (min-width: $phoneWidth) and (max-width: $tableWidth) {
+			// grid-column: 1 / 3;
+			margin: 0 auto;
+		}
+		@media screen and (max-width: $phoneWidth) {
+			margin: 0 auto;
+			text-align: center;
+		}
+	}
+	&__form-description {
+		max-width: rem(200);
+		color: $ds75;
+		font-size: rem(14);
+	}
+	&__basement {
+		
+	}
+	&__basement-inner {
+		padding: rem(26) 0;
+		display: flex;
+		justify-content: space-between;
+	}
+	&__copyright {
+		font-size: rem(14);
+		color: $ds75;
+	}
+}
