all pages is completed, exptect search room

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -194,4 +194,5 @@ section, .section {
 @import "modules/nav-social";
 @import "modules/footer";
 @import "modules/section-main";
+@import "modules/section-search";
 
