--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -50,7 +50,7 @@ $white                   : #ffffff;
 
 // box-shadow
 
-$bs-2										 : 0px 0px 25px rgba(0, 0, 0, 0.2);;
+$bs-2										 : 0px 10px 20px rgba(31, 32, 65, 0.05);
 
 // transition 
 
