--- a/src/assets/scss/modules/header.scss
+++ b/src/assets/scss/modules/header.scss
@@ -16,11 +16,20 @@
 		align-items: center;
 		@media screen and (max-width: $smDesktopWidth) {
 			display: grid;
-			grid-template-columns: 1fr 1fr;
+			grid-template-columns: auto 1fr auto;
 			grid-template-rows: 2fr;
 		}
-		@media screen and (max-width: $smDesktopWidth) {
-			grid-template-columns: auto 1fr auto;
+		@media screen and (max-width: $tableWidth) {
+
+		}
+		@media screen and (max-width: $phoneWidth) {
+
+		}
+	}
+	.logo-block {
+		@media screen and (max-width: $tableWidth) {
+			grid-column: 1 / 3;
+			grid-row: 1 / 1;
 		}
 	}
 	&__buttons {
@@ -30,26 +39,29 @@
 			}
 		}
 		@media screen and (max-width: $smDesktopWidth) {
-			margin-left: auto;
-			grid-column: 2 / 3;
-			grid-row: 1 / 1;
+			grid-column: 3 / 4;
+			grid-rows: 1 / 1;
 		}
 		@media screen and (max-width: $tableWidth) {
-			grid-column: 3 / 4;
-			font-size: rem(12);
-			.button {
-				padding: rem(10) rem(15);
-			}
+			display: none;
+		}
+		@media screen and (max-width: $phoneWidth) {
+
 		}
 	}
 	&__nav {
 		margin-left: auto;
 		@media screen and (max-width: $smDesktopWidth) {
 			margin: auto;
-			grid-column: 1 / 3;
+			grid-column: 1 / 4;
+			grid-row: 2 / 2;
 		}
 		@media screen and (max-width: $tableWidth) {
 			display: none;
+		}
+		@media screen and (max-width: $phoneWidth) {
+			grid-column: 1 / 3;
+			grid-row: 2 / 2;
 		}
 	}
 
@@ -176,12 +188,25 @@
 			max-height: 1000px;
 		}
 	}
+	&__drop-list {
+		.button {
+			padding: 15px 20px;
+			margin: 0 auto;
+			margin-top: 20px;
+			display: inherit;
+		}
+	}
 	&__drop-li {
 		display: block;
 		width: 100%;
 		text-align: center;
 		&:first-child {
 			@include MontBold;
+		}
+		&:last-child {
+			.button {
+				margin-bottom: 0;
+			}
 		}
 	}
 	&__drop-link {
