--- a/src/assets/scss/modules/wrap-element.scss
+++ b/src/assets/scss/modules/wrap-element.scss
@@ -14,6 +14,9 @@
 	&_margin-b-20 {
 		margin-bottom: rem(20);
 	}
+	&_datepicker {
+		
+	}
 	&_inline {
 		display: flex;
 		justify-content: space-between;
