--- a/src/pug/pages/Landing-page.pug
+++ b/src/pug/pages/Landing-page.pug
@@ -10,20 +10,19 @@ include ../includes/modules/radio-button.pug
 include ../includes/modules/toggle.pug
 include ../includes/modules/toggle-checkbox.pug
 include ../includes/modules/like-dislike.pug
-include ../includes/modules/rate.pug
 include ../includes/modules/range-slider.pug
 
 block content
 	header.header
 		.container
 			+header(true)
-	section.section.section-main.section-main_landing
+	section.section.section-main.section-main_bg-1
 			.container
 				.section-main__inner-wrap
 					.card.card_with-padding
 						form
 							span.title Найдем номера под ваши пожелания
-							.wrap-element.wrap-element_inline.wrap-element_margin-b-20
+							.wrap-element.wrap-element_inline.wrap-element_margin-b-20.wrap-element_datepicker
 								.wrap-element__item
 									span.title-element прибытие
 									+input("input-wrapper_w150 input-wrapper_icon-show",
